--- a/practice-two/index.html
+++ b/practice-two/index.html
@@ -15,7 +15,7 @@
 <body>
     <!-- <div class="container"> -->
     <!-- Header -->
-    <header class="header">
+    <header>
         <div class="topbar"></div>
         <div class="container">
             <div class="navbar">
@@ -43,13 +43,17 @@
         </div>
         <div class="header__content">
             <div class="container">
-                <h2>Look good without leaving your house.</h2>
-                <p>Upbox is the easiest way to look your best without having to hunt for the perfect makeup
-                    combination.Our stylists curate the latest trends and send them directly to your door every month.
-                </p>
-                <button type="button" class="nav_btn-content">sign up ></button>
-                <div class="box__image">
-                    <img src="./assets/images/photos/box.jpg" alt="box" />
+                <div class="header__content--main">
+                    <div class="header__content--text">
+                        <h2 class="header__content--title">Look good without leaving your house.</h2>
+                        <p class="header__content--desc">Upbox is the easiest way to look your best without having to
+                            hunt for the perfect makeup combination.Our stylists curate the latest trends and send them
+                            directly to your door every month.</p>
+                        <button type="button" class="nav_btn-content">sign up ></button>
+                    </div>
+                    <div class="box__image">
+                        <img src="./assets/images/photos/box.jpg" alt="box" />
+                    </div>
                 </div>
             </div>
         </div>
@@ -157,7 +161,7 @@
         </div>
     </section>
     <!-- footer -->
-    <footer class="footer">
+    <footer>
         <div class="container">
             <section class="footer-container">
                 <article class="footer-container__top-side">
