Change html for header section

--- a/practice-two/index.html
+++ b/practice-two/index.html
@@ -18,10 +18,12 @@
     <header>
         <div class="topbar"></div>
         <div class="container">
-            <div class="navbar">
+            <nav class="navbar">
                 <div class="navbar__banner">
                     <div class="navbar__logo">
-                        <img src="./assets/images/icons/logo.png" alt="logo" />
+                        <a href="javascript:void(0)">
+                            <img src="./assets/images/icons/logo.png" alt="logo" />
+                        </a>
                     </div>
                     <div class="navbar__bars">
                         <img src="./assets/images/icons/bars.png" alt="logo" />
@@ -29,36 +31,37 @@
                 </div>
                 <div class="navbar__menu">
                     <ul class="navbar__list">
-                        <li class="navbar__list-item"><a href="">This month</a></li>
-                        <li class="navbar__list-item"><a href="">skin</a></li>
-                        <li class="navbar__list-item"><a href="">hair</a></li>
-                        <li class="navbar__list-item"><a href="">bath</a></li>
-                        <li class="navbar__list-item"><a href="">sale</a></li>
+                        <li class="navbar__list-item"><a href="javascript:void(0)">This month</a></li>
+                        <li class="navbar__list-item"><a href="javascript:void(0)">skin</a></li>
+                        <li class="navbar__list-item"><a href="javascript:void(0)">hair</a></li>
+                        <li class="navbar__list-item"><a href="javascript:void(0)">bath</a></li>
+                        <li class="navbar__list-item"><a href="javascript:void(0)">sale</a></li>
                     </ul>
                     <div class="navbar__btn">
                         <button>login ></button>
                     </div>
                 </div>
-            </div>
+            </nav>
         </div>
-        <div class="header__content">
-            <div class="container">
-                <div class="header__content--main">
-                    <div class="header__content--text">
-                        <h2 class="header__content--title">Look good without leaving your house.</h2>
-                        <p class="header__content--desc">Upbox is the easiest way to look your best without having to
-                            hunt for the perfect makeup combination.Our stylists curate the latest trends and send them
-                            directly to your door every month.</p>
-                        <button type="button" class="nav_btn-content">sign up ></button>
-                    </div>
-                    <div class="box__image">
-                        <img src="./assets/images/photos/box.jpg" alt="box" />
-                    </div>
+
+    </header>
+    <div class="header__content">
+        <div class="container">
+            <div class="header__content--main">
+                <div class="header__content--text">
+                    <h1 class="header__content--title">Look good without leaving your house.</h1>
+                    <p class="header__content--desc">Upbox is the easiest way to look your best without having to
+                        hunt for the perfect makeup combination.Our stylists curate the latest trends and send them
+                        directly to your door every month.</p>
+                    <button type="button" class="nav_btn-content">sign up ></button>
+                </div>
+                <div class="box__image">
+                    <img class="image__box--mobile" src="./assets/images/photos/box.jpg" alt="box" />
+                    <img class="image__box--desktop" src="./assets/images/photos/box_destop.jpg" alt="box">
                 </div>
             </div>
         </div>
-    </header>
-
+    </div>
 
     <!-- Pick your plans section -->
     <div class="container">
