Change html for Pick Your Plans section

--- a/practice-two/index.html
+++ b/practice-two/index.html
@@ -51,7 +51,7 @@
                 <div class="header__content--text">
                     <h1 class="header__content--title">Look good without leaving your house.</h1>
                     <p class="header__content--desc">Upbox is the easiest way to look your best without having to
-                        hunt for the perfect makeup combination.Our stylists curate the latest trends and send them
+                        hunt for the perfect makeup combination. Our stylists curate the latest trends and send them
                         directly to your door every month.</p>
                     <button type="button" class="nav_btn-content">sign up ></button>
                 </div>
@@ -73,13 +73,13 @@
 
             <div class="content__main-list">
                 <div class="main__list--item">
-                    <h3>Monthly</h3>
-                    <p>$18/mo</p>
+                    <p class="list__item-monthly">Monthly</p>
+                    <p class="list__item-dolar">$18/mo</p>
                     <button>find your box</button>
                 </div>
                 <div class="main__list--item">
-                    <h3>Yearly</h3>
-                    <p>$15/mo</p>
+                    <p class="list__item-monthly">Yearly</p>
+                    <p class="list__item-dolar">$15/mo</p>
                     <button>find your box</button>
                 </div>
 
