change the alt's name of the img tag

--- a/practice-two/index.html
+++ b/practice-two/index.html
@@ -92,12 +92,12 @@
         <section class="content__how-it-works">
             <h2 class="sub-title">How it works</h2>
             <div class="underline">
-                <img src="./assets/images/photos/underline.jpg" alt="underline" />
+                <img src="./assets/images/photos/underline_hiw.jpg" alt="underline" />
             </div>
             <div class="content__main">
                 <div class="main__how-it-works">
                     <div class="main__how-it-works--img">
-                        <img src="./assets/images/photos/girl_with_phone.jpg" alt="group" />
+                        <img src="./assets/images/photos/girl_with_phone.jpg" alt="girl_with_phone" />
                     </div>
                     <div class="main__how-it-works--title">
                         <h3>Setup your profile & preferences</h3>
@@ -108,7 +108,7 @@
                 </div>
                 <div class="main__how-it-works">
                     <div class="main__how-it-works--img">
-                        <img src="./assets/images/photos/pink_box.jpg" alt="group" />
+                        <img src="./assets/images/photos/pink_box.jpg" alt="pink_box" />
 
                     </div>
                     <div class="main__how-it-works--title">
@@ -119,7 +119,7 @@
                 </div>
                 <div class="main__how-it-works">
                     <div class="main__how-it-works--img">
-                        <img src="./assets/images/photos/girl_makeup.jpg" alt="group" />
+                        <img src="./assets/images/photos/girl_makeup.jpg" alt="girl_makeup" />
                     </div>
                     <div class="main__how-it-works--title">
                         <h3>Try it on at home</h3>
@@ -145,15 +145,15 @@
                     <p>How to rock the lip look that turns heads</p>
                 </article>
                 <article class="main__social-post">
-                    <img src="./assets/images/photos/chest.jpg" alt="girl" />
+                    <img src="./assets/images/photos/chest.jpg" alt="chest" />
                     <p>Find the perfect shade for the season</p>
                 </article>
                 <article class="main__social-post">
-                    <img src="./assets/images/photos/makeup_brushes.jpg" alt="girl" />
+                    <img src="./assets/images/photos/makeup_brushes.jpg" alt="makeup_brushes" />
                     <p>The 5 eye shadow secrets you never knew</p>
                 </article>
                 <article class="main__social-post">
-                    <img src="./assets/images/photos/grey_hair.jpg" alt="girl" />
+                    <img src="./assets/images/photos/grey_hair.jpg" alt="grey_hair" />
                     <p>The pro-tips for at home hair dying</p>
                 </article>
 
@@ -170,10 +170,10 @@
                 <article class="footer-container__top-side">
                     <img class="top-side__logo" src="./assets/images/icons/logo_footer.png" alt="logo" />
                     <article class="top-side__icon">
-                        <img src="./assets/images/icons/instagram.png" alt="icon" />
-                        <img src="./assets/images/icons/facebook.png" alt="icon" />
-                        <img src="./assets/images/icons/twitter.png" alt="icon" />
-                        <img src="./assets/images/icons/snapchat.png" alt="icon" />
+                        <img src="./assets/images/icons/instagram.png" alt="instagram" />
+                        <img src="./assets/images/icons/facebook.png" alt="facebook" />
+                        <img src="./assets/images/icons/twitter.png" alt="twitter" />
+                        <img src="./assets/images/icons/snapchat.png" alt="snapchat" />
                     </article>
                 </article>
                 <article class="footer-container__center-site">
