Update html for How it work section

--- a/practice-two/index.html
+++ b/practice-two/index.html
@@ -88,52 +88,52 @@
         </section>
     </div>
     <!-- How it works section -->
-    <div class="container">
-        <section class="content__how-it-works">
-            <h2 class="sub-title">How it works</h2>
-            <div class="underline">
-                <img src="./assets/images/photos/underline_hiw.jpg" alt="underline" />
+    <!-- <div class="container"> -->
+    <section class="content__how-it-works">
+        <h2 class="sub-title">How it works</h2>
+        <div class="underline">
+            <img src="./assets/images/photos/underline_hiw.jpg" alt="underline" />
+        </div>
+        <div class="content__main">
+            <div class="main__how-it-works">
+                <div class="main__how-it-works--img">
+                    <img src="./assets/images/photos/girl_with_phone.jpg" alt="girl_with_phone" />
+                </div>
+                <div class="main__how-it-works--title">
+                    <h3>Setup your profile & preferences</h3>
+                    <p>Once you create an account, you can start to tell us your likes and dislikes so we can
+                        tailor the experience just for you.</p>
+                </div>
+
             </div>
-            <div class="content__main">
-                <div class="main__how-it-works">
-                    <div class="main__how-it-works--img">
-                        <img src="./assets/images/photos/girl_with_phone.jpg" alt="girl_with_phone" />
-                    </div>
-                    <div class="main__how-it-works--title">
-                        <h3>Setup your profile & preferences</h3>
-                        <p>Once you create an account, you can start to tell us your likes and dislikes so we can
-                            tailor the experience just for you.</p>
-                    </div>
-
+            <div class="main__how-it-works">
+                <div class="main__how-it-works--img">
+                    <img class="img__pinkbox1" src="./assets/images/photos/pink_box.jpg" alt="pink_box" />
+                    <img class="img__pinkbox2" src="./assets/images/photos/pink_box2.jpg" alt="pink_box" />
                 </div>
-                <div class="main__how-it-works">
-                    <div class="main__how-it-works--img">
-                        <img src="./assets/images/photos/pink_box.jpg" alt="pink_box" />
-
-                    </div>
-                    <div class="main__how-it-works--title">
-                        <h3>Review your custom box</h3>
-                        <p>Once we get to know you, we will show you the box we’ve crafted. This is your chance to
-                            approve it before we ship it to your house.</p>
-                    </div>
-                </div>
-                <div class="main__how-it-works">
-                    <div class="main__how-it-works--img">
-                        <img src="./assets/images/photos/girl_makeup.jpg" alt="girl_makeup" />
-                    </div>
-                    <div class="main__how-it-works--title">
-                        <h3>Try it on at home</h3>
-                        <p>Your box will arrive within 3-5 days (usually sooner) and you get the joy to unbox your
-                            Upbox. Try it all on and send back whatever you’re not in love with.</p>
-                    </div>
-
-                </div>
-                <div class="how-it-works__btn">
-                    <button>try it for yourself</button>
+                <div class="main__how-it-works--title">
+                    <h3>Review your custom box</h3>
+                    <p>Once we get to know you, we will show you the box we’ve crafted. This is your chance to
+                        approve it before we ship it to your house.</p>
                 </div>
             </div>
-        </section>
-    </div>
+            <div class="main__how-it-works">
+                <div class="main__how-it-works--img">
+                    <img src="./assets/images/photos/girl_makeup.jpg" alt="girl_makeup" />
+                </div>
+                <div class="main__how-it-works--title">
+                    <h3>Try it on at home</h3>
+                    <p>Your box will arrive within 3-5 days (usually sooner) and you get the joy to unbox your
+                        Upbox. Try it all on and send back whatever you’re not in love with.</p>
+                </div>
+
+            </div>
+            <div class="how-it-works__btn">
+                <button>try it for yourself</button>
+            </div>
+        </div>
+    </section>
+    <!-- </div> -->
     <!-- social post -->
 
     <section class="content__social-post">
