change HTML for Social Post section

--- a/practice-two/index.html
+++ b/practice-two/index.html
@@ -61,6 +61,7 @@
                 </div>
             </div>
         </div>
+
     </div>
 
     <!-- Pick your plans section -->
@@ -137,31 +138,31 @@
     <!-- social post -->
 
     <section class="content__social-post">
-        <div class="container">
-            <h2>Social Posts</h2>
-            <section class="list__social-post">
-                <article class="main__social-post">
-                    <img src="./assets/images/photos/girl.jpg" alt="girl" />
-                    <p>How to rock the lip look that turns heads</p>
-                </article>
-                <article class="main__social-post">
-                    <img src="./assets/images/photos/chest.jpg" alt="chest" />
-                    <p>Find the perfect shade for the season</p>
-                </article>
-                <article class="main__social-post">
-                    <img src="./assets/images/photos/makeup_brushes.jpg" alt="makeup_brushes" />
-                    <p>The 5 eye shadow secrets you never knew</p>
-                </article>
-                <article class="main__social-post">
-                    <img src="./assets/images/photos/grey_hair.jpg" alt="grey_hair" />
-                    <p>The pro-tips for at home hair dying</p>
-                </article>
+        <!-- <div class="container"> -->
+        <h2>Social Posts</h2>
+        <div class="list__social-post">
+            <div class="main__social-post">
+                <img src="./assets/images/photos/girl.jpg" alt="girl" />
+                <p>How to rock the lip look that turns heads</p>
+            </div>
+            <div class="main__social-post">
+                <img src="./assets/images/photos/chest.jpg" alt="chest" />
+                <p>Find the perfect shade for the season</p>
+            </div>
+            <div class="main__social-post">
+                <img src="./assets/images/photos/makeup_brushes.jpg" alt="makeup_brushes" />
+                <p>The 5 eye shadow secrets you never knew</p>
+            </div>
+            <div class="main__social-post">
+                <img src="./assets/images/photos/grey_hair.jpg" alt="grey_hair" />
+                <p>The pro-tips for at home hair dying</p>
+            </div>
 
-            </section>
-            <article class="social-post__btn">
-                <button>follow us instagram</button>
-            </article>
         </div>
+        <div class="social-post__btn">
+            <button>follow us instagram</button>
+        </div>
+        <!-- </div> -->
     </section>
     <!-- footer -->
     <footer>
