Update all file

--- a/practice-two/index.html
+++ b/practice-two/index.html
@@ -55,13 +55,13 @@
                         directly to your door every month.</p>
                     <button type="button" class="nav_btn-content">sign up ></button>
                 </div>
-                <div class="box__image">
-                    <img class="image__box--mobile" src="./assets/images/photos/box.jpg" alt="box" />
-                    <img class="image__box--desktop" src="./assets/images/photos/box_destop.jpg" alt="box">
-                </div>
+
             </div>
         </div>
-
+        <div class="box__image">
+            <img class="image__box--mobile" src="./assets/images/photos/box.jpg" alt="box" />
+            <img class="image__box--desktop" src="./assets/images/photos/box_destop.jpg" alt="box">
+        </div>
     </div>
 
     <!-- Pick your plans section -->
@@ -89,7 +89,7 @@
         </section>
     </div>
     <!-- How it works section -->
-    <!-- <div class="container"> -->
+
     <section class="content__how-it-works">
         <h2 class="sub-title">How it works</h2>
         <div class="underline">
@@ -134,7 +134,7 @@
             </div>
         </div>
     </section>
-    <!-- </div> -->
+
     <!-- social post -->
 
     <section class="content__social-post">
@@ -178,6 +178,7 @@
                     </article>
                 </article>
                 <article class="footer-container__center-site">
+                    <!-- <div class="abc"> -->
                     <article class="center-site__upbox">
                         <h3>upbox</h3>
                         <a href="javascript:void(0)">upbox box bag</a>
@@ -195,6 +196,8 @@
                         <a href="javascript:void(0)">press</a>
 
                     </article>
+                    <!-- </div> -->
+                    <!-- <div class="xyz"> -->
                     <article class="center-site__upbox">
                         <h3>Find Us On</h3>
                         <a href="javascript:void(0)">Instagram</a>
@@ -211,6 +214,7 @@
                         <a href="javascript:void(0)">Community</a>
 
                     </article>
+                    <!-- </div> -->
                 </article>
                 <article class="footer-container__bottom-side">
                     <article class="bottom-side__title">
