--- a/practice-two/index.html
+++ b/practice-two/index.html
@@ -46,7 +46,7 @@
 
     </header>
     <div class="header__content">
-        <div class="container">
+        <div class="content__container">
             <div class="header__content--main">
                 <div class="header__content--text">
                     <h1 class="header__content--title">Look good without leaving your house.</h1>
@@ -57,11 +57,12 @@
                 </div>
 
             </div>
+            <div class="box__image">
+                <img class="image__box--mobile" src="./assets/images/photos/box.jpg" alt="box" />
+                <img class="image__box--desktop" src="./assets/images/photos/box_destop.jpg" alt="box">
+            </div>
         </div>
-        <div class="box__image">
-            <img class="image__box--mobile" src="./assets/images/photos/box.jpg" alt="box" />
-            <img class="image__box--desktop" src="./assets/images/photos/box_destop.jpg" alt="box">
-        </div>
+
     </div>
 
     <!-- Pick your plans section -->
@@ -167,66 +168,66 @@
     <!-- footer -->
     <footer>
         <section class="footer-container">
-            <div class="container">
-                <article class="footer-container__top-side">
-                    <img class="top-side__logo" src="./assets/images/icons/logo_footer.png" alt="logo" />
-                    <article class="top-side__icon">
-                        <img src="./assets/images/icons/instagram.png" alt="instagram" />
-                        <img src="./assets/images/icons/facebook.png" alt="facebook" />
-                        <img src="./assets/images/icons/twitter.png" alt="twitter" />
-                        <img src="./assets/images/icons/snapchat.png" alt="snapchat" />
-                    </article>
+            <!-- <div class="container"> -->
+            <article class="footer-container__top-side">
+                <img class="top-side__logo" src="./assets/images/icons/logo_footer.png" alt="logo" />
+                <article class="top-side__icon">
+                    <img src="./assets/images/icons/instagram.png" alt="instagram" />
+                    <img src="./assets/images/icons/facebook.png" alt="facebook" />
+                    <img src="./assets/images/icons/twitter.png" alt="twitter" />
+                    <img src="./assets/images/icons/snapchat.png" alt="snapchat" />
                 </article>
-                <article class="footer-container__center-site">
-                    <!-- <div class="abc"> -->
-                    <article class="center-site__upbox">
-                        <h3>upbox</h3>
-                        <a href="javascript:void(0)">upbox box bag</a>
-                        <a href="javascript:void(0)">upbox box platinum</a>
-                        <a href="javascript:void(0)">up box vip</a>
-                        <a href="javascript:void(0)">deals</a>
-                        <a href="javascript:void(0)">seasional item</a>
-                        <a href="javascript:void(0)">upbox promise</a>
-                    </article>
-                    <article class="center-site__upbox">
-                        <h3>Product</h3>
-                        <a href="javascript:void(0)">get the app</a>
-                        <a href="javascript:void(0)">loyalty program</a>
-                        <a href="javascript:void(0)">affiliates</a>
-                        <a href="javascript:void(0)">press</a>
+            </article>
+            <article class="footer-container__center-site">
+                <!-- <div class="abc"> -->
+                <article class="center-site__upbox">
+                    <h3>upbox</h3>
+                    <a href="javascript:void(0)">upbox box bag</a>
+                    <a href="javascript:void(0)">upbox box platinum</a>
+                    <a href="javascript:void(0)">up box vip</a>
+                    <a href="javascript:void(0)">deals</a>
+                    <a href="javascript:void(0)">seasional item</a>
+                    <a href="javascript:void(0)">upbox promise</a>
+                </article>
+                <article class="center-site__upbox">
+                    <h3>Product</h3>
+                    <a href="javascript:void(0)">get the app</a>
+                    <a href="javascript:void(0)">loyalty program</a>
+                    <a href="javascript:void(0)">affiliates</a>
+                    <a href="javascript:void(0)">press</a>
 
-                    </article>
-                    <!-- </div> -->
-                    <!-- <div class="xyz"> -->
-                    <article class="center-site__upbox">
-                        <h3>Find Us On</h3>
-                        <a href="javascript:void(0)">Instagram</a>
-                        <a href="javascript:void(0)">Facebook</a>
-                        <a href="javascript:void(0)">TikTok</a>
-                        <a href="javascript:void(0)">SnapChat</a>
-                        <a href="javascript:void(0)">Twitter</a>
-                    </article>
-                    <article class="center-site__upbox">
-                        <h3>Help</h3>
-                        <a href="javascript:void(0)">Returns</a>
-                        <a href="javascript:void(0)">FAQ</a>
-                        <a href="javascript:void(0)">Contact</a>
-                        <a href="javascript:void(0)">Community</a>
+                </article>
+                <!-- </div> -->
+                <!-- <div class="xyz"> -->
+                <article class="center-site__upbox">
+                    <h3>Find Us On</h3>
+                    <a href="javascript:void(0)">Instagram</a>
+                    <a href="javascript:void(0)">Facebook</a>
+                    <a href="javascript:void(0)">TikTok</a>
+                    <a href="javascript:void(0)">SnapChat</a>
+                    <a href="javascript:void(0)">Twitter</a>
+                </article>
+                <article class="center-site__upbox">
+                    <h3>Help</h3>
+                    <a href="javascript:void(0)">Returns</a>
+                    <a href="javascript:void(0)">FAQ</a>
+                    <a href="javascript:void(0)">Contact</a>
+                    <a href="javascript:void(0)">Community</a>
 
-                    </article>
-                    <!-- </div> -->
                 </article>
-                <article class="footer-container__bottom-side">
-                    <article class="bottom-side__title">
-                        <p>Terms</p>
-                        <p>Privacy Policy</p>
-                    </article>
-                    <article class="bottom-side__desc">
-                        <p>© 2020 Quest AI. Upbox is a Sample Project and open source design project free for
-                            personal and commercial use.</p>
-                    </article>
+                <!-- </div> -->
+            </article>
+            <article class="footer-container__bottom-side">
+                <article class="bottom-side__title">
+                    <p>Terms</p>
+                    <p>Privacy Policy</p>
                 </article>
-            </div>
+                <article class="bottom-side__desc">
+                    <p>© 2020 Quest AI. Upbox is a Sample Project and open source design project free for
+                        personal and commercial use.</p>
+                </article>
+            </article>
+            <!-- </div> -->
         </section>
     </footer>
 
