--- a/practice-two/index.html
+++ b/practice-two/index.html
@@ -166,68 +166,73 @@
         <!-- </div> -->
     </section>
     <!-- footer -->
-    <footer>
+    <footer class="footer">
         <section class="footer-container">
-            <!-- <div class="container"> -->
-            <article class="footer-container__top-side">
-                <img class="top-side__logo" src="./assets/images/icons/logo_footer.png" alt="logo" />
-                <article class="top-side__icon">
-                    <img src="./assets/images/icons/instagram.png" alt="instagram" />
-                    <img src="./assets/images/icons/facebook.png" alt="facebook" />
-                    <img src="./assets/images/icons/twitter.png" alt="twitter" />
-                    <img src="./assets/images/icons/snapchat.png" alt="snapchat" />
-                </article>
-            </article>
-            <article class="footer-container__center-site">
-                <!-- <div class="abc"> -->
-                <article class="center-site__upbox">
-                    <h3>upbox</h3>
-                    <a href="javascript:void(0)">upbox box bag</a>
-                    <a href="javascript:void(0)">upbox box platinum</a>
-                    <a href="javascript:void(0)">up box vip</a>
-                    <a href="javascript:void(0)">deals</a>
-                    <a href="javascript:void(0)">seasional item</a>
-                    <a href="javascript:void(0)">upbox promise</a>
-                </article>
-                <article class="center-site__upbox">
-                    <h3>Product</h3>
-                    <a href="javascript:void(0)">get the app</a>
-                    <a href="javascript:void(0)">loyalty program</a>
-                    <a href="javascript:void(0)">affiliates</a>
-                    <a href="javascript:void(0)">press</a>
+            <div class="container">
+                <div class="footer-container__top-side">
+                    <div class="top-side__logo">
+                        <img src="./assets/images/icons/logo_footer.png" alt="logo" />
+                    </div>
+                    <div class="top-side__icon">
+                        <img src="./assets/images/icons/instagram.png" alt="instagram" />
+                        <img src="./assets/images/icons/facebook.png" alt="facebook" />
+                        <img src="./assets/images/icons/twitter.png" alt="twitter" />
+                        <img src="./assets/images/icons/snapchat.png" alt="snapchat" />
+                    </div>
+                </div>
+                <div class="footer-container__center-site">
+                    <div class="center-site">
+                        <div class="center-site__upbox">
+                            <h3>UPBOX</h3>
+                            <a href="javascript:void(0)">upbox box bag</a>
+                            <a href="javascript:void(0)">upbox box platinum</a>
+                            <a href="javascript:void(0)">up box vip</a>
+                            <a href="javascript:void(0)">deals</a>
+                            <a href="javascript:void(0)">seasional item</a>
+                            <a href="javascript:void(0)">upbox promise</a>
+                        </div>
+                        <div class="center-site__upbox">
+                            <h3>Find Us On</h3>
+                            <a href="javascript:void(0)">Instagram</a>
+                            <a href="javascript:void(0)">Facebook</a>
+                            <a href="javascript:void(0)">TikTok</a>
+                            <a href="javascript:void(0)">SnapChat</a>
+                            <a href="javascript:void(0)">Twitter</a>
+                        </div>
+                    </div>
+                    <div class="center-site">
+                        <div class="center-site__upbox">
+                            <h3>Product</h3>
+                            <a href="javascript:void(0)">get the app</a>
+                            <a href="javascript:void(0)">loyalty program</a>
+                            <a href="javascript:void(0)">affiliates</a>
+                            <a href="javascript:void(0)">press</a>
+                        </div>
 
-                </article>
-                <!-- </div> -->
-                <!-- <div class="xyz"> -->
-                <article class="center-site__upbox">
-                    <h3>Find Us On</h3>
-                    <a href="javascript:void(0)">Instagram</a>
-                    <a href="javascript:void(0)">Facebook</a>
-                    <a href="javascript:void(0)">TikTok</a>
-                    <a href="javascript:void(0)">SnapChat</a>
-                    <a href="javascript:void(0)">Twitter</a>
-                </article>
-                <article class="center-site__upbox">
-                    <h3>Help</h3>
-                    <a href="javascript:void(0)">Returns</a>
-                    <a href="javascript:void(0)">FAQ</a>
-                    <a href="javascript:void(0)">Contact</a>
-                    <a href="javascript:void(0)">Community</a>
-
-                </article>
-                <!-- </div> -->
-            </article>
-            <article class="footer-container__bottom-side">
-                <article class="bottom-side__title">
-                    <p>Terms</p>
-                    <p>Privacy Policy</p>
-                </article>
-                <article class="bottom-side__desc">
-                    <p>© 2020 Quest AI. Upbox is a Sample Project and open source design project free for
-                        personal and commercial use.</p>
-                </article>
-            </article>
-            <!-- </div> -->
+                        <div class="center-site__upbox">
+                            <h3>Help</h3>
+                            <a href="javascript:void(0)">Returns</a>
+                            <a href="javascript:void(0)">FAQ</a>
+                            <a href="javascript:void(0)">Contact</a>
+                            <a href="javascript:void(0)">Community</a>
+                            <a href="javascript:void(0)">Videos</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer__border"></div>
+            <div class="container">
+                <div class="footer-container__bottom-side">
+                    <div class="bottom-side__title">
+                        <p>Terms</p>
+                        <p>Privacy Policy</p>
+                    </div>
+                    <div class="bottom-side__desc">
+                        <p>© 2020 Quest AI. Upbox is a Sample Project and open source design project free for
+                            personal and commercial use.</p>
+                    </div>
+                </div>
+            </div>
         </section>
     </footer>
 
