--- a/practice-two/index.html
+++ b/practice-two/index.html
@@ -167,7 +167,7 @@
     </section>
     <!-- footer -->
     <footer class="footer">
-        <div class="footer-topic">
+        <section class="footer-topic">
             <section class="footer-container">
                 <div class="container">
                     <div class="footer-container__top-side">
@@ -237,7 +237,7 @@
                     </div>
                 </div>
             </section>
-        </div>
+        </section>
     </footer>
 
 </body>
