--- a/practice-two/index.html
+++ b/practice-two/index.html
@@ -13,7 +13,6 @@
 </head>
 
 <body>
-    <!-- <div class="container"> -->
     <!-- Header -->
     <header>
         <div class="topbar"></div>
@@ -43,7 +42,6 @@
                 </div>
             </nav>
         </div>
-
     </header>
     <div class="header__content">
         <div class="content__container">
@@ -55,14 +53,12 @@
                         directly to your door every month.</p>
                     <button type="button" class="nav_btn-content">sign up ></button>
                 </div>
-
             </div>
             <div class="box__image">
                 <img class="image__box--mobile" src="./assets/images/photos/box.jpg" alt="box" />
                 <img class="image__box--desktop" src="./assets/images/photos/box_destop.jpg" alt="box">
             </div>
         </div>
-
     </div>
 
     <!-- Pick your plans section -->
@@ -72,7 +68,6 @@
             <div class="underline">
                 <img src="./assets/images/photos/underline.jpg" alt="underline" />
             </div>
-
             <div class="content__main-list">
                 <div class="main__list--item">
                     <p class="list__item-monthly">Monthly</p>
@@ -84,7 +79,6 @@
                     <p class="list__item-dolar">$15/mo</p>
                     <button>find your box</button>
                 </div>
-
             </div>
             <p class="description">Your plan auto-renews at the end of 30 days from the 1st day you signed-up.</p>
         </section>
@@ -92,7 +86,7 @@
     <!-- How it works section -->
 
     <section class="content__how-it-works">
-        <h2 class="sub-title">How it works</h2>
+        <h2 class="sub-title">How it works?</h2>
         <div class="underline">
             <img src="./assets/images/photos/underline_hiw.jpg" alt="underline" />
         </div>
@@ -106,7 +100,6 @@
                     <p>Once you create an account, you can start to tell us your likes and dislikes so we can
                         tailor the experience just for you.</p>
                 </div>
-
             </div>
             <div class="main__how-it-works">
                 <div class="main__how-it-works--img">
@@ -128,7 +121,6 @@
                     <p>Your box will arrive within 3-5 days (usually sooner) and you get the joy to unbox your
                         Upbox. Try it all on and send back whatever you’re not in love with.</p>
                 </div>
-
             </div>
             <div class="how-it-works__btn">
                 <button>try it for yourself</button>
@@ -158,7 +150,6 @@
                 <img src="./assets/images/photos/grey_hair.jpg" alt="grey_hair" />
                 <p>The pro-tips for at home hair dying</p>
             </div>
-
         </div>
         <div class="social-post__btn">
             <button>follow us instagram</button>
@@ -167,7 +158,7 @@
     </section>
     <!-- footer -->
     <footer class="footer">
-        <section class="footer-topic">
+        <div class="footer-topic">
             <section class="footer-container">
                 <div class="container">
                     <div class="footer-container__top-side">
@@ -209,7 +200,6 @@
                                 <a href="javascript:void(0)">affiliates</a>
                                 <a href="javascript:void(0)">press</a>
                             </div>
-
                             <div class="center-site__upbox">
                                 <h3>Help</h3>
                                 <a href="javascript:void(0)">Returns</a>
@@ -237,7 +227,7 @@
                     </div>
                 </div>
             </section>
-        </section>
+        </div>
     </footer>
 
 </body>
