Apply perfect pixcel for desktop version

--- a/practice-two/index.html
+++ b/practice-two/index.html
@@ -62,7 +62,7 @@
     </div>
 
     <!-- Pick your plans section -->
-    <div class="container">
+    <div class="pick-your-plan">
         <section class="content__pick-your-plan">
             <h2 class="sub-title">Pick your plan</h2>
             <div class="underline">
