Change class name  for img tag

--- a/practice-two/index.html
+++ b/practice-two/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/fonts.css">
     <link rel="stylesheet" href="./styles/main.css">
-
     <title>UpBox</title>
 </head>
 
@@ -25,7 +24,7 @@
                         </a>
                     </div>
                     <div class="navbar__bars">
-                        <img src="./assets/images/icons/bars.png" alt="logo" />
+                        <img src="./assets/images/icons/bars.png" alt="bars" />
                     </div>
                 </div>
                 <div class="navbar__menu">
@@ -103,8 +102,8 @@
             </div>
             <div class="main__how-it-works">
                 <div class="main__how-it-works--img">
-                    <img class="img__pinkbox1" src="./assets/images/photos/pink_box.jpg" alt="pink_box" />
-                    <img class="img__pinkbox2" src="./assets/images/photos/pink_box2.jpg" alt="pink_box" />
+                    <img class="img__pinkbox--mobile" src="./assets/images/photos/pink_box.jpg" alt="pink_box" />
+                    <img class="img__pinkbox--desktop" src="./assets/images/photos/pink_box2.jpg" alt="pink_box" />
                 </div>
                 <div class="main__how-it-works--title">
                     <h3>Review your custom box</h3>
@@ -131,7 +130,6 @@
     <!-- social post -->
 
     <section class="content__social-post">
-        <!-- <div class="container"> -->
         <h2>Social Posts</h2>
         <div class="list__social-post">
             <div class="main__social-post">
@@ -154,7 +152,6 @@
         <div class="social-post__btn">
             <button>follow us instagram</button>
         </div>
-        <!-- </div> -->
     </section>
     <!-- footer -->
     <footer class="footer">
