Update html character

--- a/practice-two/index.html
+++ b/practice-two/index.html
@@ -36,7 +36,8 @@
                         <li class="navbar__list-item"><a href="javascript:void(0)">sale</a></li>
                     </ul>
                     <div class="navbar__btn">
-                        <button>login ></button>
+                        <button>login &gt; </button>
+
                     </div>
                 </div>
             </nav>
@@ -218,7 +219,7 @@
                             <p>Privacy Policy</p>
                         </div>
                         <div class="bottom-side__desc">
-                            <p>© 2020 Quest AI. Upbox is a Sample Project and open source design project free for
+                            <p>&copy; 2020 Quest AI. Upbox is a Sample Project and open source design project free for
                                 personal and commercial use.</p>
                         </div>
                     </div>
