Add div tag to wrap img

--- a/practice-two/index.html
+++ b/practice-two/index.html
@@ -134,19 +134,27 @@
         <h2>Social Posts</h2>
         <div class="list__social-post">
             <div class="main__social-post">
-                <img src="./assets/images/photos/girl.jpg" alt="girl" />
+                <div>
+                    <img src="./assets/images/photos/girl.jpg" alt="girl" />
+                </div>
                 <p>How to rock the lip look that turns heads</p>
             </div>
             <div class="main__social-post">
-                <img src="./assets/images/photos/chest.jpg" alt="chest" />
+                <div>
+                    <img src="./assets/images/photos/chest.jpg" alt="chest" />
+                </div>
                 <p>Find the perfect shade for the season</p>
             </div>
             <div class="main__social-post">
-                <img src="./assets/images/photos/makeup_brushes.jpg" alt="makeup_brushes" />
+                <div>
+                    <img src="./assets/images/photos/makeup_brushes.jpg" alt="makeup_brushes" />
+                </div>
                 <p>The 5 eye shadow secrets you never knew</p>
             </div>
             <div class="main__social-post">
-                <img src="./assets/images/photos/grey_hair.jpg" alt="grey_hair" />
+                <div>
+                    <img src="./assets/images/photos/grey_hair.jpg" alt="grey_hair" />
+                </div>
                 <p>The pro-tips for at home hair dying</p>
             </div>
         </div>
@@ -164,10 +172,15 @@
                             <img src="./assets/images/icons/logo_footer.png" alt="logo" />
                         </div>
                         <div class="top-side__icon">
-                            <img src="./assets/images/icons/instagram.png" alt="instagram" />
-                            <img src="./assets/images/icons/facebook.png" alt="facebook" />
-                            <img src="./assets/images/icons/twitter.png" alt="twitter" />
-                            <img src="./assets/images/icons/snapchat.png" alt="snapchat" />
+                            <div class="icon">
+                                <img src="./assets/images/icons/instagram.png" alt="instagram" />
+                            </div>
+                            <div class="icon">
+                                <img src="./assets/images/icons/facebook.png" alt="facebook" />
+                            </div>
+                            <div class="icon"><img src="./assets/images/icons/twitter.png" alt="twitter" /></div>
+                            <div class="icon"><img src="./assets/images/icons/snapchat.png" alt="snapchat" /></div>
+
                         </div>
                     </div>
                     <div class="footer-container__center-site">
